--- a/DUBStats/Properties/Resources.resx
+++ b/DUBStats/Properties/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Bright_Way_Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="CompanyLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\Bright_Way_Logo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Hopstarter_Soft_Scraps_Document_Preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
